force-app/main/default/objects/SCAR_Team__c/SCAR_Team__c.object-meta.xml
<CustomObject>
    <label>SCAR Team</label>
    <nameField>
        <label>SCAR Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SCAR Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>