force-app/main/default/objects/SCAR_Team__c/fields/SCAR_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>SCAR_Contact_Name__c</fullName>
    <label>SCAR Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>