force-app/main/default/objects/SCAR_Team__c/fields/SCAR_Form__c.field-meta.xml
<CustomField>
    <fullName>SCAR_Form__c</fullName>
    <description>SCAR form Id</description>
    <label>SCAR Form</label>
    <referenceTo>SCAR__c</referenceTo>
    <relationshipLabel>Section 1 - Scar Team</relationshipLabel>
    <relationshipName>SCAR_Team</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>